--- a/canisters/example/Cargo.toml
+++ b/canisters/example/Cargo.toml
@@ -11,6 +11,8 @@ ic-kit = "0.4.3"
 ic-cdk = "0.3.1"
 serde = "1.0.116"
 serde_cbor = "0.11.2"
+cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "cap-sdk" }
+cap-sdk-core = { git = "https://github.com/Psychedelic/cap.git", branch = "cap-sdk" }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-std = { version="1.10.0", features = ["attributes"] }
